# serializer version: 1
# name: TestFullformRoutes.test_html_valid_input_returns_200[dv\xe4]
  '''
  <!doctype html>
  <html lang="sv">
      <head>
          <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
          <link
              rel="shortcut icon"
              href="https://svn.spraakdata.gu.se/sb-arkiv/pub/images/saldo_icon.png"
          />
          <link
              rel="stylesheet"
              type="text/css"
              href="http://testserver/static/saldo.css"
          />
          <title>Fullform | dvä</title>
          
          <script
              src="https://unpkg.com/htmx.org@1.9.8"
              crossorigin="anonymous"
          ></script>
      </head>
  
      <body>
          <center>
              <p>
                  <a href="http://testserver/fl/html"
                      ><img
                          src="https://spraakbanken.gu.se/sites/spraakbanken.gu.se/files/img/saldo/saldo.gif"
                          align="top"
                          alt="SALDO: gå tillbaka till startsidan"
                  /></a>
              </p>
          </center>
          <div id="output_table">
  <center>
      <form action="http://testserver/ff/html" method="get" class="inputclass">
          <label for="search">Skriv in en ordform</label>
          <input type="search" id="search" class="inputclass" value="dvä" name="fragment" size="30"
              placeholder="Skriv in en ordform" results="10" />
          <input type="submit" value="Sök" />
      </form>
      
      <p>segment: dvä</p>
      <p>continuations:  </p>
      <table border="1">
          <tr>
              <th>gf</th>
              <th>id</th>
              <th>pos</th>
              <th>is</th>
              <th>msd</th>
              <th>p</th>
          </tr>
          
          
  </center>
  </div>
          <footer>
              <hr />
              <ul>
                  <li>
                      <a href="https://spraakbanken.gu.se/saldo"
                          >SALDOs projektsida</a
                      >
                  </li>
                  <li>
                      <a
                          href="https://svn.spraakdata.gu.se/repos/sblex/pub/saldo_instruktion.pdf"
                          >dokumentation (pdf)</a
                      >
                  </li>
              </ul>
          </footer>
      </body>
  </html>
  '''
# ---
# name: TestFullformRoutes.test_html_valid_input_returns_200[dv\xe4l]
  '''
  <!doctype html>
  <html lang="sv">
      <head>
          <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
          <link
              rel="shortcut icon"
              href="https://svn.spraakdata.gu.se/sb-arkiv/pub/images/saldo_icon.png"
          />
          <link
              rel="stylesheet"
              type="text/css"
              href="http://testserver/static/saldo.css"
          />
          <title>Fullform | dväl</title>
          
          <script
              src="https://unpkg.com/htmx.org@1.9.8"
              crossorigin="anonymous"
          ></script>
      </head>
  
      <body>
          <center>
              <p>
                  <a href="http://testserver/fl/html"
                      ><img
                          src="https://spraakbanken.gu.se/sites/spraakbanken.gu.se/files/img/saldo/saldo.gif"
                          align="top"
                          alt="SALDO: gå tillbaka till startsidan"
                  /></a>
              </p>
          </center>
          <div id="output_table">
  <center>
      <form action="http://testserver/ff/html" method="get" class="inputclass">
          <label for="search">Skriv in en ordform</label>
          <input type="search" id="search" class="inputclass" value="dväl" name="fragment" size="30"
              placeholder="Skriv in en ordform" results="10" />
          <input type="submit" value="Sök" />
      </form>
      
      <p>segment: dväl</p>
      <p>continuations:  </p>
      <table border="1">
          <tr>
              <th>gf</th>
              <th>id</th>
              <th>pos</th>
              <th>is</th>
              <th>msd</th>
              <th>p</th>
          </tr>
          
          
  </center>
  </div>
          <footer>
              <hr />
              <ul>
                  <li>
                      <a href="https://spraakbanken.gu.se/saldo"
                          >SALDOs projektsida</a
                      >
                  </li>
                  <li>
                      <a
                          href="https://svn.spraakdata.gu.se/repos/sblex/pub/saldo_instruktion.pdf"
                          >dokumentation (pdf)</a
                      >
                  </li>
              </ul>
          </footer>
      </body>
  </html>
  '''
# ---
# name: TestFullformRoutes.test_html_valid_input_returns_200[dv\xe4ljs]
  '''
  <!doctype html>
  <html lang="sv">
      <head>
          <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
          <link
              rel="shortcut icon"
              href="https://svn.spraakdata.gu.se/sb-arkiv/pub/images/saldo_icon.png"
          />
          <link
              rel="stylesheet"
              type="text/css"
              href="http://testserver/static/saldo.css"
          />
          <title>Fullform | dväljs</title>
          
          <script
              src="https://unpkg.com/htmx.org@1.9.8"
              crossorigin="anonymous"
          ></script>
      </head>
  
      <body>
          <center>
              <p>
                  <a href="http://testserver/fl/html"
                      ><img
                          src="https://spraakbanken.gu.se/sites/spraakbanken.gu.se/files/img/saldo/saldo.gif"
                          align="top"
                          alt="SALDO: gå tillbaka till startsidan"
                  /></a>
              </p>
          </center>
          <div id="output_table">
  <center>
      <form action="http://testserver/ff/html" method="get" class="inputclass">
          <label for="search">Skriv in en ordform</label>
          <input type="search" id="search" class="inputclass" value="dväljs" name="fragment" size="30"
              placeholder="Skriv in en ordform" results="10" />
          <input type="submit" value="Sök" />
      </form>
      
      <p>segment: dväljs</p>
      <p>continuations:  </p>
      <table border="1">
          <tr>
              <th>gf</th>
              <th>id</th>
              <th>pos</th>
              <th>is</th>
              <th>msd</th>
              <th>p</th>
          </tr>
          
          
  </center>
  </div>
          <footer>
              <hr />
              <ul>
                  <li>
                      <a href="https://spraakbanken.gu.se/saldo"
                          >SALDOs projektsida</a
                      >
                  </li>
                  <li>
                      <a
                          href="https://svn.spraakdata.gu.se/repos/sblex/pub/saldo_instruktion.pdf"
                          >dokumentation (pdf)</a
                      >
                  </li>
              </ul>
          </footer>
      </body>
  </html>
  '''
# ---
# name: TestFullformRoutes.test_html_valid_input_returns_200[dv]
  '''
  <!doctype html>
  <html lang="sv">
      <head>
          <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
          <link
              rel="shortcut icon"
              href="https://svn.spraakdata.gu.se/sb-arkiv/pub/images/saldo_icon.png"
          />
          <link
              rel="stylesheet"
              type="text/css"
              href="http://testserver/static/saldo.css"
          />
          <title>Fullform | dv</title>
          
          <script
              src="https://unpkg.com/htmx.org@1.9.8"
              crossorigin="anonymous"
          ></script>
      </head>
  
      <body>
          <center>
              <p>
                  <a href="http://testserver/fl/html"
                      ><img
                          src="https://spraakbanken.gu.se/sites/spraakbanken.gu.se/files/img/saldo/saldo.gif"
                          align="top"
                          alt="SALDO: gå tillbaka till startsidan"
                  /></a>
              </p>
          </center>
          <div id="output_table">
  <center>
      <form action="http://testserver/ff/html" method="get" class="inputclass">
          <label for="search">Skriv in en ordform</label>
          <input type="search" id="search" class="inputclass" value="dv" name="fragment" size="30"
              placeholder="Skriv in en ordform" results="10" />
          <input type="submit" value="Sök" />
      </form>
      
      <p>segment: dv</p>
      <p>continuations:  </p>
      <table border="1">
          <tr>
              <th>gf</th>
              <th>id</th>
              <th>pos</th>
              <th>is</th>
              <th>msd</th>
              <th>p</th>
          </tr>
          
          
  </center>
  </div>
          <footer>
              <hr />
              <ul>
                  <li>
                      <a href="https://spraakbanken.gu.se/saldo"
                          >SALDOs projektsida</a
                      >
                  </li>
                  <li>
                      <a
                          href="https://svn.spraakdata.gu.se/repos/sblex/pub/saldo_instruktion.pdf"
                          >dokumentation (pdf)</a
                      >
                  </li>
              </ul>
          </footer>
      </body>
  </html>
  '''
# ---
# name: TestFullformRoutes.test_xml_valid_input_returns_200[dv\xe4]
  '''
  <?xml version="1.0" encoding="UTF-8"?>
  <result>
      <c></c>
      <as>
  
      </as>
  </result>
  '''
# ---
# name: TestFullformRoutes.test_xml_valid_input_returns_200[dv\xe4l]
  '''
  <?xml version="1.0" encoding="UTF-8"?>
  <result>
      <c></c>
      <as>
  
      </as>
  </result>
  '''
# ---
# name: TestFullformRoutes.test_xml_valid_input_returns_200[dv\xe4ljs]
  '''
  <?xml version="1.0" encoding="UTF-8"?>
  <result>
      <c></c>
      <as>
  
      </as>
  </result>
  '''
# ---
# name: TestFullformRoutes.test_xml_valid_input_returns_200[dv]
  '''
  <?xml version="1.0" encoding="UTF-8"?>
  <result>
      <c></c>
      <as>
  
      </as>
  </result>
  '''
# ---
